--- a/register.html
+++ b/register.html
@@ -1,95 +1,133 @@
-<!DOCTYPE html>
-<html lang="en" data-theme="light">
+<!doctype html>
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Register – Khotwa</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <base href="/">
+
+  <title>التسجيل في عضوية مجلس طلاب خطوة</title>
+  <meta name="description" content="قدّم طلب الانضمام إلى مجلس طلاب خطوة في جامعة لا تروب – ملبورن.">
+  <link rel="canonical" href="https://khotwastudentcouncil.com/register"/>
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="التسجيل في عضوية مجلس طلاب خطوة"/>
+  <meta property="og:description" content="انضم إلى مجلس طلاب خطوة وساهم في الفعاليات والأنشطة."/>
+  <meta property="og:url" content="https://khotwastudentcouncil.com/register"/>
+  <meta property="og:image" content="https://khotwastudentcouncil.com/og-cover.jpg"/>
+  <meta name="twitter:card" content="summary_large_image"/>
+
+  <style>
+    :root{--primary:#1e40af;--primary-600:#1d4ed8;--ring:#e5e7eb;--bg:#fff;--text:#0f172a;--muted:#475569;--card:#f8fafc;--radius:16px}
+    *{box-sizing:border-box} html,body{height:100%}
+    body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;background:var(--bg);color:var(--text)}
+    a{color:inherit;text-decoration:none}
+    .container{width:min(1120px,92%);margin-inline:auto}
+
+    /* Navbar */
+    .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
+    .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
+    .brand{display:flex;align-items:center;gap:.6rem;font-weight:700}
+    .brand img{width:28px;height:28px;object-fit:contain}
+    .nav-links{display:flex;align-items:center;gap:.6rem;flex-wrap:wrap}
+    .pill{border:1px solid var(--ring);padding:.4rem .8rem;border-radius:999px;background:#fff}
+    .cta{background:var(--primary);color:#fff;padding:.55rem .95rem;border-radius:12px;font-weight:600}
+    .cta:hover{background:var(--primary-600)}
+
+    main{padding:32px 0}
+    .card{background:var(--card);border:1px solid var(--ring);border-radius:var(--radius);padding:16px}
+    form{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+    label{font-weight:600}
+    input,select,textarea{padding:.6rem .7rem;border:1px solid var(--ring);border-radius:10px}
+    .full{grid-column:1/-1}
+    .actions{display:flex;gap:.6rem;margin-top:6px}
+    button{cursor:pointer;border:0}
+    .btn-primary{background:var(--primary);color:#fff;padding:.6rem 1rem;border-radius:10px}
+    .btn-muted{background:#fff;border:1px solid var(--ring);padding:.6rem 1rem;border-radius:10px}
+
+    footer{border-top:1px solid var(--ring);padding:18px 0;color:var(--muted)}
+    @media (max-width:900px){form{grid-template-columns:1fr}}
+  </style>
 </head>
 <body>
-<header class="navbar" id="mainNavbar">
-  <div class="logo">KHOTWA COUNCIL</div>
-  <button class="hamburger" id="hamburgerBtn">☰</button>
-  <nav class="nav-container" id="navMenu">
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="calendar.html">Calendar</a></li>
-      <li><a href="register.html" class="active">Register</a></li>
-      <li><a href="admin.html">Admin</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="profile.html">Profile</a></li>
-    </ul>
-    <ul class="nav-links" id="authLinks"></ul>
-    <button id="darkToggle" class="dark-btn">🌓</button>
-  </nav>
-</header>
+  <header class="navbar" role="banner">
+    <div class="container nav-inner">
+      <a class="brand" href="index.html" aria-label="الصفحة الرئيسية">
+        <img id="logo" alt="شعار مجلس طلاب خطوة" width="28" height="28">
+        <span>مجلس طلاب خطوة – La Trobe</span>
+      </a>
+      <nav class="nav-links" aria-label="التنقل الرئيسي">
+        <a class="pill" href="#" lang="en" hreflang="en">English</a>
+        <a class="pill" href="about.html">من نحن</a>
+        <a class="pill" href="news.html">الأخبار</a>
+        <a class="pill" href="events.html">الفعاليات</a>
+        <a class="pill" href="calendar.html">التقويم</a>
+        <a class="pill" href="resources.html">الموارد</a>
+        <a class="pill" href="contact.html">تواصل</a>
+        <a class="cta" href="register.html" aria-current="page">قدّم للعضوية</a>
+      </nav>
+    </div>
+  </header>
 
-<section class="register-section" data-aos="fade-up">
-  <div class="register-card">
-    <h2>Join the Council</h2>
-    <form id="regForm">
-      <div class="form-group">
-        <span class="material-symbols-outlined">person</span>
-        <input name="name" type="text" placeholder="Full Name" required />
-      </div>
-      <div class="form-group">
-        <span class="material-symbols-outlined">mail</span>
-        <input name="email" type="email" placeholder="Email Address" required />
-      </div>
-      <div class="form-group">
-        <span class="material-symbols-outlined">badge</span>
-        <input name="major" type="text" placeholder="Student Major" required />
-      </div>
-      <div class="form-group">
-        <span class="material-symbols-outlined">school</span>
-        <select name="level" required>
-          <option value="" disabled selected>Select Level</option>
-          <option>1st Year</option>
-          <option>2nd Year</option>
-          <option>3rd Year</option>
-          <option>4th Year</option>
-        </select>
-      </div>
-      <button type="submit">Submit</button>
-    </form>
-    <div id="toastReg" class="toast">✔️ Registration successful!</div>
-  </div>
-</section>
+  <main class="container" id="main">
+    <h1 style="margin:0 0 12px;">التسجيل في عضوية المجلس</h1>
+    <p style="margin:0 0 16px;color:var(--muted);">عبّئ النموذج التالي ليتم التواصل معك من فريق مجلس طلاب خطوة.</p>
+    <div class="card">
+      <form method="post" action="#">
+        <div class="full">
+          <label for="fullName">الاسم الكامل</label>
+          <input id="fullName" name="fullName" type="text" required placeholder="اكتب اسمك الثلاثي">
+        </div>
+        <div>
+          <label for="email">البريد الجامعي</label>
+          <input id="email" name="email" type="email" required placeholder="name@latrobe.edu.au">
+        </div>
+        <div>
+          <label for="phone">رقم الجوال</label>
+          <input id="phone" name="phone" type="tel" placeholder="+61">
+        </div>
+        <div>
+          <label for="program">البرنامج</label>
+          <select id="program" name="program" required>
+            <option value="">اختر</option>
+            <option>IT</option><option>Cybersecurity</option><option>Bioscience</option><option>Business</option><option>Foundation</option>
+          </select>
+        </div>
+        <div>
+          <label for="intake">فصل الدراسة</label>
+          <select id="intake" name="intake">
+            <option value="">اختر</option>
+            <option>Oct 2025</option><option>Mar 2026</option>
+          </select>
+        </div>
+        <div class="full">
+          <label for="interest">ليش حاب تنضم؟</label>
+          <textarea id="interest" name="interest" rows="4" placeholder="اكتب باختصار"></textarea>
+        </div>
+        <div class="actions full">
+          <button class="btn-primary" type="submit">إرسال الطلب</button>
+          <a class="btn-muted" href="index.html">الرجوع للرئيسية</a>
+        </div>
+      </form>
+    </div>
+  </main>
 
-<footer class="footer">
-  <p>© 2025 Khotwa Student Council</p>
-</footer>
+  <footer role="contentinfo">
+    <div class="container">
+      <small>© <span id="y"></span> Khotwa Student Council – La Trobe</small>
+    </div>
+  </footer>
 
-<script src="https://unpkg.com/aos@2.3.4/dist/aos.js" defer></script>
-<script src="main.js" defer></script>
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const form = document.getElementById("regForm");
-  const toast = document.getElementById("toastReg");
-
-  form.addEventListener("submit", e => {
-    e.preventDefault();
-    const name = form.name.value.trim();
-    const email = form.email.value.trim().toLowerCase();
-    const major = form.major.value.trim();
-    const level = form.level.value;
-
-    if (!name || !email || !major || !level) return alert("All fields are required");
-
-    const arr = JSON.parse(localStorage.getItem("registrations") || "[]");
-    if (arr.some(r => r.email === email)) return alert("Email already registered");
-
-    arr.push({ name, email, major, level });
-    localStorage.setItem("registrations", JSON.stringify(arr));
-    form.reset();
-
-    toast.classList.add("show");
-    setTimeout(() => toast.classList.remove("show"), 3000);
-  });
-
-});
-</script>
+  <script>
+    document.getElementById('y').textContent=new Date().getFullYear();
+    // حمّل أول مسار لوغو متاح (عدّل القائمة حسب مساراتك الفعلية)
+    (function(){
+      const img=document.getElementById('logo');
+      const candidates=['/assets/logo.svg','/assets/logo.png','/logo.svg','/logo.png','/images/logo.svg','/images/logo.png'];
+      let i=0; const tryNext=()=>{ if(i>=candidates.length){img.style.display='none';return;}
+        const t=new Image(); t.onload=()=>img.src=candidates[i]; t.onerror=()=>{i++;tryNext()}; t.src=candidates[i];
+      }; tryNext();
+    })();
+  </script>
 </body>
 </html>
