--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <meta property="og:title" content="مجلس طلاب خطوة – Khotwa"/>
   <meta property="og:description" content="فعاليات، أخبار، وخدمات موجهة لطلاب خطوة في ملبورن."/>
   <meta property="og:url" content="https://khotwastudentcouncil.com/"/>
-  <!-- يمكنك لاحقًا تغيير og:image لأي صورة ثابتة عندك -->
   <meta property="og:image" content="https://b.top4top.io/p_35166f7hr1.jpg"/>
 
   <!-- Twitter -->
@@ -32,7 +31,7 @@
     a{color:inherit;text-decoration:none} a:visited{color:inherit}
     .container{width:min(1120px,92%);margin-inline:auto}
 
-    /* تحسين وصولية بسيط */
+    /* وصولية بسيطة */
     :where(a,button,[role="button"],input,select,textarea):focus-visible{
       outline:3px solid #2563eb; outline-offset:3px; border-radius:8px;
     }
@@ -49,4 +48,204 @@
     .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
     .brand .logo{width:40px;height:40px;object-fit:cover;border-radius:8px}
     .nav-links{display:flex;gap:1rem;align-items:center}
-    .nav-lin
+    .nav-links a{padding:.5rem .75rem;border-radius:10px}
+    .nav-links a:hover{background:var(--card)}
+    .lang-toggle{padding:.45rem .75rem;border:1px solid var(--ring);background:#fff;border-radius:10px;cursor:pointer}
+
+    /* Hero */
+    header.hero{background:linear-gradient(180deg,#fff 0,#f5f7ff 100%);border-bottom:1px solid var(--ring)}
+    .hero-inner{display:grid;grid-template-columns:1.2fr 1fr;gap:2rem;padding:3rem 0;align-items:center}
+    .hero h1{margin:0 0 .5rem;font-size:clamp(1.6rem,2.6vw + 1rem,2.4rem)}
+    .hero p{color:var(--muted);margin:0 0 1.2rem}
+    .cta-row{display:flex;gap:.8rem;flex-wrap:wrap}
+    .btn{display:inline-flex;align-items:center;justify-content:center;gap:.5rem;padding:.9rem 1.1rem;border-radius:14px;font-weight:700;border:1px solid transparent;cursor:pointer}
+    .btn-primary{background:var(--primary);color:#fff;box-shadow:0 10px 28px rgba(29,78,216,.22)}
+    .btn-primary:hover{background:var(--primary-600)}
+    .btn-outline{background:#fff;border-color:var(--ring)}
+    .card{background:#fff;border:1px solid var(--ring);border-radius:16px;padding:1rem}
+    .hero-img img{width:100%;height:auto;object-fit:cover;border-radius:16px}
+
+    /* Sections */
+    section{padding:2rem 0}
+    .section-head{display:flex;align-items:end;justify-content:space-between;gap:1rem;margin-bottom:1.2rem}
+    .section-head h2{margin:0;font-size:1.4rem}
+    .muted{color:var(--muted)}
+    .grid{display:grid;gap:1rem}
+    .grid-3{grid-template-columns:repeat(3,1fr)}
+    .grid-2{grid-template-columns:repeat(2,1fr)}
+    @media (max-width:980px){.hero-inner{grid-template-columns:1fr}.grid-3,.grid-2{grid-template-columns:1fr}}
+
+    /* Footer */
+    footer{border-top:1px solid var(--ring);background:#fff}
+    .foot{display:flex;justify-content:space-between;gap:1rem;align-items:center;padding:1.2rem 0}
+  </style>
+</head>
+<body>
+  <!-- رابط وصولية -->
+  <a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
+
+  <!-- Navbar -->
+  <nav class="navbar" aria-label="الشريط العلوي">
+    <div class="container nav-inner">
+      <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
+        <!-- نفس صورة اللوغو الأصلية + أبعاد لتثبيت التخطيط -->
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" class="logo" alt="شعار مجلس طلاب خطوة" width="80" height="80">
+        <span data-lang="ar">مجلس طلاب خطوة – La Trobe</span>
+        <span data-lang="en" hidden>Khotwa Student Council – La Trobe</span>
+      </a>
+
+      <div class="nav-links">
+        <a href="/about.html"><span data-lang="ar">من نحن</span><span data-lang="en" hidden>About</span></a>
+        <a href="/news.html"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
+        <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span></a>
+        <a href="/calendar.html"><span data-lang="ar">التقويم</span><span data-lang="en" hidden>Calendar</span></a>
+        <a href="/resources.html"><span data-lang="ar">الموارد</span><span data-lang="en" hidden>Resources</span></a>
+        <a href="/contact.html" class="nav-cta">
+          <span data-lang="ar">تواصل</span>
+          <span data-lang="en" hidden>Contact</span>
+        </a>
+        <button id="lang-toggle" class="lang-toggle" type="button">English</button>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Hero -->
+  <header class="hero" id="main">
+    <div class="container hero-inner">
+      <div>
+        <h1 data-lang="ar">مجلس طلاب خطوة – صوت الطلاب وشريك الجامعة</h1>
+        <h1 data-lang="en" hidden>Khotwa Student Council – Students’ Voice and University Partner</h1>
+
+        <p data-lang="ar">نمكّن طلاب برنامج خطوة أكاديميًا واجتماعيًا وثقافيًا، ونبني الجسر بين الطلاب وإدارة الجامعة بفعاليات نوعية وخدمات موجهة.</p>
+        <p data-lang="en" hidden>We empower Khotwa students academically, socially, and culturally, building bridges with the university through quality events and tailored services.</p>
+
+        <div class="cta-row">
+          <a href="/contact.html" class="btn btn-primary">
+            <span data-lang="ar">قدّم للعضوية</span>
+            <span data-lang="en" hidden>Apply for Membership</span>
+          </a>
+          <a href="/events.html" class="btn btn-outline">
+            <span data-lang="ar">شاهد أقرب الفعاليات</span>
+            <span data-lang="en" hidden>See Upcoming Events</span>
+          </a>
+        </div>
+      </div>
+
+      <!-- صورة الشباب الأصلية + أبعاد لتقليل CLS -->
+      <div class="hero-img">
+        <img src="https://b.top4top.io/p_35166f7hr1.jpg"
+             alt="مجموعة طلاب مجلس خطوة – La Trobe"
+             width="1600" height="900" loading="eager" decoding="async">
+      </div>
+    </div>
+  </header>
+
+  <!-- About quick -->
+  <section aria-labelledby="about-ar">
+    <div class="container">
+      <div class="section-head">
+        <h2 id="about-ar" data-lang="ar">من نحن</h2>
+        <h2 id="about-en" data-lang="en" hidden>About Us</h2>
+        <a class="muted" href="/about.html">
+          <span data-lang="ar">المزيد</span>
+          <span data-lang="en" hidden>Learn more</span>
+        </a>
+      </div>
+
+      <div class="grid grid-2">
+        <article class="card">
+          <h3 data-lang="ar">الرؤية</h3>
+          <h3 data-lang="en" hidden>Vision</h3>
+          <p data-lang="ar">دعم العملية التعليمية وخدمة المجتمع الجامعي.</p>
+          <p data-lang="en" hidden>Support the learning journey and serve our university community.</p>
+        </article>
+
+        <article class="card">
+          <h3 data-lang="ar">الرسالة</h3>
+          <h3 data-lang="en" hidden>Mission</h3>
+          <p data-lang="ar">تمكين الطلاب وتعزيز علاقتهم بالإدارة الجامعية.</p>
+          <p data-lang="en" hidden>Empower students and strengthen ties with university administration.</p>
+        </article>
+
+        <article class="card">
+          <h3 data-lang="ar">الأهداف</h3>
+          <h3 data-lang="en" hidden>Goals</h3>
+          <p data-lang="ar">التمثيل، القيادة، التفاعل المجتمعي، والدعوة.</p>
+          <p data-lang="en" hidden>Representation, leadership, community engagement, and advocacy.</p>
+        </article>
+
+        <article class="card">
+          <h3 data-lang="ar">التنظيم</h3>
+          <h3 data-lang="en" hidden>Structure</h3>
+          <p data-lang="ar">رئيس ونائب وقادة فرق ومنسقو الأنشطة والإعلام.</p>
+          <p data-lang="en" hidden>President, Vice President, team leads, and activity/media coordinators.</p>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- Events preview -->
+  <section aria-labelledby="events-ar">
+    <div class="container">
+      <div class="section-head">
+        <h2 id="events-ar" data-lang="ar">الفعاليات القادمة</h2>
+        <h2 id="events-en" data-lang="en" hidden>Upcoming Events</h2>
+        <a class="muted" href="/events.html">
+          <span data-lang="ar">تقويم الفعاليات</span>
+          <span data-lang="en" hidden>All events</span>
+        </a>
+      </div>
+
+      <div class="grid grid-3">
+        <article class="card">
+          <h3 data-lang="ar">ورشة تخصصات خطوة</h3>
+          <h3 data-lang="en" hidden>Khotwa Majors Workshop</h3>
+          <p class="muted" data-lang="ar">IT، الأمن السيبراني، العلوم الحيوية، الأعمال.</p>
+          <p class="muted" data-lang="en" hidden>IT, Cybersecurity, Biosciences, Business.</p>
+        </article>
+
+        <article class="card">
+          <h3 data-lang="ar">بطولة البادل</h3>
+          <h3 data-lang="en" hidden>Padel Championship</h3>
+          <p class="muted" data-lang="ar">تنظيم رياضي طلابي – La Trobe Sports Centre.</p>
+          <p class="muted" data-lang="en" hidden>Student sports event – La Trobe Sports Centre.</p>
+        </article>
+
+        <article class="card">
+          <h3 data-lang="ar">ماراثون داخل الحرم</h3>
+          <h3 data-lang="en" hidden>On-Campus Marathon</h3>
+          <p class="muted" data-lang="ar">مسارات 1K و2.5K و10K.</p>
+          <p class="muted" data-lang="en" hidden>1K, 2.5K, and 10K routes.</p>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer aria-label="تذييل الموقع">
+    <div class="container foot">
+      <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
+      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener">Instagram</a>
+    </div>
+  </footer>
+
+  <script>
+    // سنة الحقوق
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // تبديل اللغة (نفس منطقك الأصلي)
+    const toggleBtn = document.getElementById('lang-toggle');
+    let isEn = false;
+    function setLang(en){
+      isEn = en;
+      document.querySelectorAll('[data-lang="ar"]').forEach(el => el.hidden = en);
+      document.querySelectorAll('[data-lang="en"]').forEach(el => el.hidden = !en);
+      document.documentElement.lang = en ? 'en' : 'ar';
+      document.documentElement.dir  = en ? 'ltr' : 'rtl';
+      toggleBtn.textContent = en ? 'العربية' : 'English';
+    }
+    toggleBtn.addEventListener('click',()=> setLang(!isEn));
+    setLang(false);
+  </script>
+</body>
+</html>
