--- a/news.html
+++ b/news.html
@@ -4,11 +4,37 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>الأخبار – Khotwa</title>
+<meta name="description" content="آخر أخبار مجلس طلاب خطوة في جامعة لا تروب: إعلانات، شراكات، وملفات صور.">
+<link rel="canonical" href="https://khotwastudentcouncil.com/news.html"/>
+<meta name="robots" content="index,follow"/>
+
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="Khotwa Student Council">
+<meta property="og:title" content="الأخبار – Khotwa">
+<meta property="og:description" content="إعلانات المجلس، الشراكات، وملف الصور.">
+<meta property="og:url" content="https://khotwastudentcouncil.com/news.html">
+<meta property="og:image" content="https://g.top4top.io/p_3516rfttb1.jpg">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="الأخبار – Khotwa">
+<meta name="twitter:description" content="إعلانات المجلس، الشراكات، وملف الصور.">
+<meta name="twitter:image" content="https://g.top4top.io/p_3516rfttb1.jpg">
+
 <style>
 :root{--primary:#1e40af;--ring:#e5e7eb;--card:#f8fafc;--text:#0f172a;--muted:#6b7280}
-*{box-sizing:border-box} body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
+*{box-sizing:border-box}
+body{margin:0;font-family:"Segoe UI",system-ui,-apple-system,Tahoma,Arial,sans-serif;color:var(--text);background:#fff}
 a{color:inherit;text-decoration:none} a:visited{color:inherit}
 .container{width:min(1120px,92%);margin-inline:auto}
+
+/* وصولية */
+:where(a,button,[role="button"],input,select,textarea):focus-visible{outline:3px solid #2563eb;outline-offset:3px;border-radius:8px}
+.skip-link{position:absolute;inset-inline-start:1rem;inset-block-start:-100px;background:#fff;color:#000;padding:.6rem .9rem;border-radius:.5rem;box-shadow:0 2px 8px rgba(0,0,0,.15);z-index:1000}
+.skip-link:focus{inset-block-start:1rem}
+
+/* Navbar */
 .navbar{position:sticky;top:0;background:#fff;border-bottom:1px solid var(--ring);z-index:40}
 .nav-inner{display:flex;justify-content:space-between;align-items:center;padding:.8rem 0}
 .brand{display:flex;align-items:center;gap:.8rem;font-weight:700}
@@ -17,6 +43,8 @@ a{color:inherit;text-decoration:none} a:visited{color:inherit}
 .nav-links a{padding:.5rem .75rem;border-radius:10px}
 .nav-links a:hover{background:var(--card)}
 .lang-toggle{padding:.45rem .75rem;border:1px solid var(--ring);background:#fff;border-radius:10px;cursor:pointer}
+
+/* Sections */
 section{padding:2rem 0}
 .grid{display:grid;gap:1rem}
 .grid-3{grid-template-columns:repeat(3,1fr)}
@@ -25,14 +53,19 @@ section{padding:2rem 0}
 .badge{display:inline-flex;align-items:center;gap:.4rem;font-size:.8rem;background:var(--card);border:1px solid var(--ring);padding:.25rem .5rem;border-radius:999px;color:#111}
 .badge svg{width:16px;height:16px;color:var(--primary)}
 .muted{color:var(--muted)}
+
+/* Footer */
 footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
 </style>
 </head>
 <body>
-<nav class="navbar">
+<a class="skip-link" href="#main">تخطَّ إلى المحتوى</a>
+
+<nav class="navbar" aria-label="الشريط العلوي">
   <div class="container nav-inner">
     <a class="brand" href="/index.html">
-      <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="" class="logo">
+      <!-- أبعاد مثبتة لتقليل CLS -->
+      <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="80" height="80" decoding="async">
       <span data-lang="ar">مجلس طلاب خطوة – La Trobe</span>
       <span data-lang="en" hidden>Khotwa Student Council – La Trobe</span>
     </a>
@@ -41,22 +74,22 @@ footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
       <a href="/news.html" aria-current="page"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
       <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span></a>
       <a href="/calendar.html"><span data-lang="ar">التقويم</span><span data-lang="en" hidden>Calendar</span></a>
-      <a href="/resources.html"><span data-lang="ar">الموارد</span><span data-lang="en" hidden>Resources</span></a>
+      <a href="/resources.html"><span data-lang="ار">الموارد</span><span data-lang="en" hidden>Resources</span></a>
       <a href="/contact.html"><span data-lang="ar">تواصل</span><span data-lang="en" hidden>Contact</span></a>
       <button id="lang-toggle" class="lang-toggle" type="button">English</button>
     </div>
   </div>
 </nav>
 
-<main class="container">
+<main class="container" id="main">
   <section>
     <h1 data-lang="ar">الأخبار</h1>
     <h1 data-lang="en" hidden>News</h1>
 
     <div class="grid grid-3">
-      <article class="card">
+      <article class="card" id="n1">
         <span class="badge">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M8 7h8M8 11h8M8 15h5"/><path d="M5 3h14v18l-7-3-7 3z"/></svg>
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" aria-hidden="true" focusable="false" stroke-width="2"><path d="M8 7h8M8 11h8M8 15h5"/><path d="M5 3h14v18l-7-3-7 3z"/></svg>
           <span data-lang="ar">إعلان</span><span data-lang="en" hidden>Announcement</span>
         </span>
         <h3 data-lang="ar">فتح باب الانضمام</h3>
@@ -66,9 +99,9 @@ footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
         <a href="/contact.html" style="color:var(--primary)"><span data-lang="ar">قدّم الآن</span><span data-lang="en" hidden>Apply now</span></a>
       </article>
 
-      <article class="card">
+      <article class="card" id="n2">
         <span class="badge">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 7h18M3 12h18M3 17h18"/></svg>
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" aria-hidden="true" focusable="false" stroke-width="2"><path d="M3 7h18M3 12h18M3 17h18"/></svg>
           <span data-lang="ar">شراكة</span><span data-lang="en" hidden>Partnership</span>
         </span>
         <h3 data-lang="ar">تعاون جديد</h3>
@@ -77,9 +110,9 @@ footer{border-top:1px solid var(--ring);padding:1rem 0;margin-top:1rem}
         <p class="muted" data-lang="en" hidden>Academic partner to deliver specialized workshops.</p>
       </article>
 
-      <article class="card">
+      <article class="card" id="n3">
         <span class="badge">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="5" width="18" height="14" rx="2"/><path d="M3 8l9 6 9-6"/></svg>
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" aria-hidden="true" focusable="false" stroke-width="2"><rect x="3" y="5" width="18" height="14" rx="2"/><path d="M3 8l9 6 9-6"/></svg>
           <span data-lang="ar">صور</span><span data-lang="en" hidden>Photos</span>
         </span>
         <h3 data-lang="ar">ملف الصور</h3>
